--- a/_posts/2020-06-30-js-primary-1-1-2.md
+++ b/_posts/2020-06-30-js-primary-1-1-2.md
@@ -3,7 +3,7 @@ title: 【JS知识体系：1-1-2】JavaScript对象
 date:  2020-06-30 17:09:19 +0800
 category: 前端
 tags: ['JS', 'JS基础知识']
-excerpt: 
+excerpt: 什么是对象？对象有哪些操作？如何创建对象？对象有哪些特性和方法？
 ---
 
 # JavaScript对象
