--- a/_posts/2020-07-01-js-primary-1-2-1.md
+++ b/_posts/2020-07-01-js-primary-1-2-1.md
@@ -3,7 +3,7 @@ title: 【JS知识体系：1-2-1】原型和原型链
 date:  2020-07-01 17:59:21 +0800
 category: 前端
 tags: ['JS', 'JS基础知识']
-excerpt: 
+excerpt: 类和实例的定义？如何判断类型？如何理解原型和原型链？
 ---
 
 
