--- a/_posts/2020-07-02-js-primary-1-2-2.md
+++ b/_posts/2020-07-02-js-primary-1-2-2.md
@@ -3,7 +3,7 @@ title: 【JS知识体系：1-2-1】JavaScript继承
 date:  2020-07-02 17:17:49 +0800
 category: 前端
 tags: ['JS', 'JS基础知识']
-excerpt: 
+excerpt: 什么是继承？它有哪些主要的实现方式？
 ---
 
 # 继承
@@ -173,5 +173,5 @@ A {name: "a"}
 2. 使用不当也可能达不到趋利避害的效果
    怎么理解这句话呢？
 
-   
+
    未完...
