--- a/_posts/2020-07-02-js-primary-1-2-2.md
+++ b/_posts/2020-07-02-js-primary-1-2-2.md
@@ -121,12 +121,12 @@ A {name: "B", id: 2}
 	__proto__: Object
 ```
 
-这里关键是打星的那一行，调用B函数，并改变this指向A在实例化的时候，this指向的是开辟的内存空间即A的实例a，执行了星号行之后就等于将B构造函数中的属性复制给了A
+这里关键是打星的那一行，调用B函数，并改变this指向，A在实例化的时候，this指向的是开辟的内存空间即A的实例a，执行了星号行之后就等于将B构造函数中的属性复制给了A
 
 这个方法解决了2.1方式中的问题，但是它引入了新的问题
 
 1. 只能继承B构造函数中的属性，执行``a.sayName()``会报错
-2. 鉴于1的问题，你可能会说，sayName和其他一股脑儿属性都直接放到构造函数中去不就好了。
+2. 鉴于1的问题，你可能会说，sayName和其他属性一股脑儿都直接放到构造函数中去不就好了。
    这样就违背了复用的初衷。
 
 ## 2.3 组合继承
@@ -173,5 +173,151 @@ A {name: "a"}
 2. 使用不当也可能达不到趋利避害的效果
    怎么理解这句话呢？
 
+   如果我们将所有属性都放在B构造函数中，那该方法其实等同于2.2的方法，
 
-   未完...
+   如果我们将所有属性都放在B.prototype上，那所有这些属性的修改将影响所有实例
+
+   所以我们应当这么做，将共享的方法和属性放到B.prototype上，需要基因突变的属性放到构造函数当中
+
+
+
+### 2.4 原型式继承
+
+```js
+function B(name) {
+  this.name = name;
+}
+
+B.prototype.lang = 'English';
+B.prototype.sayName = function() {log(this.name)};
+
+var b = new B('bb');
+
+function inherit(obj) {
+  function F() {};
+  F.prototype = obj;
+  return new F(); // ★
+}
+var a = inherit(b);
+
+log(a, b);
+```
+
+打印结果如下：
+
+```
+F {}
+__proto__: B
+	name: "bb"
+	__proto__:
+		lang: "English"
+		sayName: ƒ ()
+		constructor: ƒ B(name)
+		__proto__: Object
+B {name: "bb"}
+name: "bb"
+__proto__:
+	lang: "English"
+	sayName: ƒ ()
+	constructor: ƒ B(name)
+	__proto__: Object
+```
+
+Object.create()就是这样的原理，用一个函数封装一个对象，然后返回这个函数的调用
+
+缺点：不能复用
+
+## 2.5 寄生式继承
+
+```js
+function B(name) {
+  this.name = name;
+}
+
+B.prototype.lang = 'English';
+B.prototype.sayName = function() {log(this.name)};
+
+var b = new B('bb');
+
+function inherit(obj) {
+  function F() {};
+  F.prototype = obj;
+  return new F(); // ★
+}
+
+function createA(obj, name) {
+  var temp = inherit(obj);
+  temp.name = name;
+  return temp;
+}
+var a = createA(b, 'a')
+
+log(a);
+```
+
+打印如下
+
+```
+F {name: "a"}
+	name: "a"
+	__proto__: B
+		name: "bb"
+		__proto__:
+			lang: "English"
+			sayName: ƒ ()
+			constructor: ƒ B(name)
+			__proto__: Object
+```
+
+和2.4区别不大，套了个壳子而已
+
+
+
+## 2.6 寄生组合式继承
+
+寄生：在函数内返回对象，然后调用
+
+组合：1,函数的原型等于另一个实例。2，在函数中用apply或者call引入另一个构造函数，可传参
+
+```js
+function B(name) {
+  this.name = name;
+}
+
+B.prototype.lang = 'English';
+B.prototype.sayName = function() {log(this.name)};
+
+function inherit(obj) {
+  function F() {};
+  F.prototype = obj;
+  return new F(); // ★
+}
+
+var b = inherit(B.prototype); // ★
+
+function A() {
+  B.apply(this, arguments); // ★
+}
+A.prototype = b; // ★
+b.constructor = A;
+var a = new A('a');
+
+log(a);
+```
+
+输出结果如下：
+
+```
+A {name: "a"}
+	name: "a"
+	__proto__: B
+		constructor: ƒ A()
+		__proto__: Object
+```
+
+
+
+这种方式其实是通过构造函数来继承属性，通过原型链的混成形式来继承方法。
+
+其基本思路是：不必为了指定子类型的原型而调用父类型的构造函数
+
