--- a/_posts/2020-07-01-js-primary-1-2-1.md
+++ b/_posts/2020-07-01-js-primary-1-2-1.md
@@ -72,12 +72,6 @@ a是待测其类的对象，b是定义类的构造函数
 ƒ Function() { [native code] }
 ```
 
-而且：
-
-```js
-Object === Object.prototype.constructor // true
-```
-
 
 
 ---
@@ -188,7 +182,7 @@ obj2.a, obj2.b, obj2.c // a, b, c
 
 这就是所谓的原型链。连接起来他们的是``__proto__``属性，这个属性是构造函数在执行后加上的，属性值为构造函数的prototype
 
-所以不难看出我们定义一个函数的时候，function都做了些什么事
+所以不难看出我们定义一个函数的时候，function会做的一些事有
 
 1. 创建一个内存空间
 2. 存入函数内的指令
