--- a/_posts/2020-07-06-js-primary-1-4-1.md
+++ b/_posts/2020-07-06-js-primary-1-4-1.md
@@ -1,12 +1,16 @@
 ---
-title: 【JS知识体系：1-4-1】javascript异步
+title: 【JS知识体系：1-4-1】javascript异步编程
 date:  2020-07-06 23:04:49 +0800
 category: 前端
 tags: ['JS', 'JS基础知识']
-excerpt:
+excerpt: 什么是同步和异步？如何实现异步编程？
 ---
 
-# 异步
+# js异步编程
+
+
+
+> **前言：**不用担心，耕耘和收获是异步的，我们终将得到。
 
 
 
@@ -98,6 +102,107 @@ function B(callback) {
 }
 B(A);
 ```
+
+
+
+上面就是一个回调函数的例子，只不过它并没有实现异步。
+
+
+
+在讲回调函数如何实现异步之前，我们必须先明确一个点，**js是单线程的，但是浏览器不是单线程**的。
+
+浏览器包含以下线程：
+
+* GUI渲染线程
+* JS引擎线程
+* 事件触发线程
+* 定时触发器线程
+* 异步http请求线程
+
+明确这点非常重要，要知道**要实现异步，最重要的一点就是要监控某种信号（一个状态或者是某个事件），当该信号出现时，通知js引擎**。那么这个任务不可能是由js引擎自己完成的，它忙着解析和执行js代码呢，所以js引擎就需要请求其他线程的协助。如果不这样做，那js引擎就得不时停下来照看两头，这样做一是无法保证即时，二是影响效率。
+
+```js
+function httpRequest(cb) {
+  $.ajax({
+    type: "GET",
+    url: url,
+    dataType: dataType,
+    success: function(res){
+      if (res.code === 0) {
+        cb();
+      }
+    }
+  });
+}
+
+function callback() {
+  // do something..
+}
+
+httpRequest(callback);
+```
+
+以上便是一个异步回调。ajax发出一个get请求后，当有结果返回时通过success来通知。
+
+
+
+### 2.2 事件监听
+
+事件监听里的概念包括：事件源，事件，事件监听器，事件处理函数
+
+一个事件监听器只能作用于一个事件源，而事件源可以有多个事件监听器，甚至可以同个事件多个监听器（钱多人傻）
+
+注册事件监听的代码形式大致如下：
+
+```js
+eventTarget.on('eventName', handleEventFunction)
+```
+
+
+
+### 2.3 发布订阅
+
+发布订阅里的概念包括：发布者、订阅者和消息。其中发布者是消息中心负责发布消息，订阅者通过注册，会接受到发布的消息。
+
+它和事件监听的区别是，发布者可以向多个不同的订阅者发布消息，订阅者也可以在多个不同的消息中心注册。
+
+
+
+### 2.4 Promise
+
+ES6中引入了Promise对象，但最早开始引入promise的是jQuery（脱帽致敬）
+
+首先我们需要了解一下Promise规范
+
+[英文版](https://promisesaplus.com/)
+
+[中文版](https://www.icode9.com/content-4-365156.html)
+
+简单总结一下规范：
+
+promise是一个拥有then方法的对象或者函数。
+
+一个promise的当前状态必须是以下三种状态的一种：
+
+**等待态（Pending）、执行态（Fulfilled）和拒绝态（Rejected）**。
+
+[![Snipaste-2020-07-08-22-54-20.jpg](https://i.postimg.cc/JhbYHGGx/Snipaste-2020-07-08-22-54-20.jpg)](https://postimg.cc/gw2HfcyL)
+
+then方法可以访问其当前值，终值和据因。
+
+```
+promise.then(onFulfilled, onRejected)
+```
+
+
+
+> `onFulfilled` 和 `onRejected` 只有在执行环境堆栈仅包含**平台代码**时才可被调用。
+>
+> 这里的**平台代码**指的是引擎、环境以及 promise 的实施代码。实践中要确保 `onFulfilled` 和 `onRejected` 方法异步执行，且应该在 `then` 方法被调用的那一轮事件循环之后的新执行栈中执行。这个事件队列可以采用“宏任务（macro-task）”机制或者“微任务（micro-task）”机制来实现。由于 promise 的实施代码本身就是平台代码（**译者注：** 即都是 JavaScript），故代码自身在处理在处理程序时可能已经包含一个任务调度队列或[『跳板』](https://en.wikipedia.org/wiki/Trampoline_(computing))。
+
+宏任务和微任务将在事件章节中介绍。
+
+this指向在严格模式下为undefined，非严格模式下为全局对象。
 
 
 
