--- a/_posts/2020-07-06-js-primary-1-4-1.md
+++ b/_posts/2020-07-06-js-primary-1-4-1.md
@@ -202,7 +202,7 @@ promise.then(onFulfilled, onRejected)
 
 宏任务和微任务将在事件章节中介绍。
 
-this指向在严格模式下为undefined，非严格模式下为全局对象。
+这里的this指向在严格模式下为undefined，非严格模式下为全局对象。
 
 
 
