--- a/_posts/2020-07-09-js-primary-1-5-1.md
+++ b/_posts/2020-07-09-js-primary-1-5-1.md
@@ -1,5 +1,5 @@
 ---
-title: 【JS知识体系：1-4-1】javascript异步编程
+title: 【JS知识体系：1-5-1】javascript 内置对象Array
 date:  2020-07-09 17:35:30 +0800
 category: 前端
 tags: ['JS', 'JS基础知识']
