--- a/_posts/2020-07-10-js-primary-1-5-2.md
+++ b/_posts/2020-07-10-js-primary-1-5-2.md
@@ -1,9 +1,9 @@
 ---
-title: javascript其他内置对象
+title: 【JS知识体系：1-5-2】javascript其他内置对象
 date:  2020-07-10 21:25:56 +0800
 category: 前端
 tags: ['JS', 'JS基础知识']
-excerpt: 认识JavaScript中的String对象
+excerpt: 认识JavaScript中的其他内置对象
 ---
 
 
