--- a/_posts/2020-07-11-js-WebAPI-2-2-1.md
+++ b/_posts/2020-07-11-js-WebAPI-2-2-1.md
@@ -55,7 +55,7 @@ DOM(Document Object Model) 译为**文档对象模型**，是 结构化文本（
 </html>
 ```
 
-以上便是一个html的示例，我们可以看到HTML它是有结构的，一个元素包裹多个元素，或者元素上又包裹着属性和文本，元素和元素之间可以有注释。浏览器将这种结构以树的结构给抽象出了DOM。
+以上便是一个html的示例，我们可以看到HTML它是有结构的，一个元素包裹多个元素，或者元素上又包裹着属性和文本，元素和元素之间可以有注释。浏览器按这种结构以树的形式给抽象出了DOM。
 
 上面说的元素、属性、文本、注释便是这棵树上最常见的节点或者说树的叶子。
 
@@ -165,9 +165,9 @@ ul.setAttribute('class', ulClass + '0'); // class: list => list0
 
    原因如下：
 
-   * onclick添加的时间处理方式是在全局环境下执行的，这污染了全局环境，很容易产生意料不到的后果。
+   * onclick添加的事件处理方式是在全局环境下执行的，这污染了全局环境，很容易产生意料不到的后果。
    * 给很多DOM元素添加onclick事件，可能会影响网页的性能。
-   * 对于使用onclick的DOM元素，如果要动态地从DOM树种删除的话，需要把对应的事件处理函数注销，假如忘了注销，就可能造成内存泄漏，这样的bug很难被发现。
+   * 对于使用onclick的DOM元素，如果要动态地从DOM树中删除的话，需要把对应的事件处理函数注销，假如忘了注销，就可能造成内存泄漏，这样的bug很难被发现。
    * 不满足HTML、CSS和JS分离的原则。强耦合。
 
 2. DOM 0级
