--- a/_posts/2020-07-11-js-WebAPI-2-1-1.md
+++ b/_posts/2020-07-11-js-WebAPI-2-1-1.md
@@ -2,7 +2,7 @@
 title: 【JS知识体系：2-1-1】javascript BOM
 date:  2020-07-11 11:03:02 +0800
 category: 前端
-tags: ['JS', 'JS WebAPI']
+tags: ['JS', 'JS-WebAPI']
 excerpt: 认识window和它的属性以及方法。
 ---
 
