--- a/_posts/2020-07-13-js-WebAPI-2-3-1.md
+++ b/_posts/2020-07-13-js-WebAPI-2-3-1.md
@@ -2,7 +2,7 @@
 title: 【JS知识体系：2-3-1】javascript 事件
 date:  2020-07-13 21:20:51 +0800
 category: 前端
-tags: ['JS', 'JS WebAPI']
+tags: ['JS', 'JS-WebAPI']
 excerpt: 掌握事件流、常见事件的用法以及事件的绑定和移除
 ---
 
