--- a/_posts/2020-07-11-js-WebAPI-2-2-1.md
+++ b/_posts/2020-07-11-js-WebAPI-2-2-1.md
@@ -2,7 +2,7 @@
 title: 【JS知识体系：2-2-1】javascript DOM
 date:  2020-07-11 15:47:00 +0800
 category: 前端
-tags: ['JS', 'JS WebAPI']
+tags: ['JS', 'JS-WebAPI']
 excerpt: 学习DOM的最好方式就是多练习
 ---
 
