--- a/_posts/2020-06-29-js-primary-1-1-1.md
+++ b/_posts/2020-06-29-js-primary-1-1-1.md
@@ -192,7 +192,7 @@ console.log(Object.prototype.toString.call({})) // [object Object]
 * 对象（在大括号中）
 * null
 
-当我们的对象属性值中含有函数时，将无法识别.
+当我们的对象属性值中含有上述以外的值时，将无法识别。例如函数，undefined和symbol
 
 ```js
 function test() {
@@ -205,8 +205,6 @@ var obj1 = {
 var obj2 = JSON.parse(JSON.stringify(obj1))
 console.log(obj2) // { a: '1' }
 ```
-
-一句话总结就是，该方法只能拷贝对象的属性而不能拷贝对象的方法
 
 
 
@@ -276,7 +274,7 @@ console.log(obj2); // { age: 20, name: 'aaa', get: [Function: get], tags: [ 1, 2
 
 
 
-**方法五：ES6中的rest运算符**
+**方法五：ES6中的扩展运算符**
 
 ```es6
 const obj2 = {...obj1}
