--- a/_posts/2020-07-02-js-primary-1-2-2.md
+++ b/_posts/2020-07-02-js-primary-1-2-2.md
@@ -86,7 +86,7 @@ undefined
 
 1. A的实例不能给B函数传参，即不能干预B创建实例的过程。
 2. 从上面的打印结果可以看出，a的原型并没有直接指向B.prototype,中间还插了一层B创建的实例b；
-   这会导致所有A的实例都共享b的属性，如果有一个实例 a_1 改变了b的属性，所有的A的实例的访问b的属性时，都是被修改了的。
+   这会导致所有A的实例都共享b的属性，如果b的属性改变，所有的A的实例的访问b的属性时，都是被修改了的。
 
 留一个思考题，如果上面代码像如下代码对调一下执行会输出什么
 
@@ -194,7 +194,7 @@ B.prototype.sayName = function() {log(this.name)};
 var b = new B('bb');
 
 function inherit(obj) {
-  function F() {};
+  function F() {}
   F.prototype = obj;
   return new F(); // ★
 }
