--- a/_posts/2020-06-29-js-primary-1-1-1.md
+++ b/_posts/2020-06-29-js-primary-1-1-1.md
@@ -355,7 +355,7 @@ null == [] // false
 ```
 [] == [] // false
 [] == {} // false
-{} == {} // true
+{} == {} // false
 {} == [] // chrome 控制台报错 Uncaught SyntaxError: Unexpected token '=='
 ```
 
